Fix z-index issue; Add title

--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -73,6 +73,7 @@ body {
 }
 
 .button {
+    z-index: 100;
     position: fixed;
     bottom: 0;
     margin: 20px;
